Add Project Section

--- a/index.html
+++ b/index.html
@@ -138,9 +138,35 @@
 
           <div class="projects">
             <div class="project-cards">
-              <div class="card">Placeholder</div>
-              <div class="card">Placeholder</div>
-              <div class="card">Placeholder</div>
+              <div class="card">
+                <div class="card-image">
+                  <img src="images/Youtube-clone.png" alt="Youtube-clone" />
+                </div>
+                <div class="project-desc">
+                  <div>
+                    <p>
+                      YouTube Clone is a responsive web project built using
+                      HTML, CSS, and Bootstrap, designed to mimic the core
+                      layout and functionality of YouTube. It includes five key
+                      pages: a home page displaying video thumbnails and a
+                      navigation bar, a subscriptions page showcasing content
+                      from followed channels, a watch later page for saved
+                      videos, a channel page highlighting a creator’s profile
+                      and uploads, and...
+                    </p>
+                  </div>
+                  <div class="tech-stack">
+                    <p>HTML</p>
+                    <p>CSS</p>
+                    <p>BootStrap</p>
+                  </div>
+                  <a
+                    href="https://github.com/GnaniSai/super30/tree/main/youtube-clone"
+                    target="_blank"
+                    ><img src="images/github.png" alt="github" width="30px"
+                  /></a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
