Add horizontal scroll for project cards

--- a/index.html
+++ b/index.html
@@ -351,8 +351,7 @@
           });
 
           // Update skill cards
-          document.querySelectorAll(".skill").forEach((element) => {
-            element.style.backgroundColor = "#1a1a1a";
+          document.querySelectorAll(".skill, .role").forEach((element) => {
             element.style.color = "white";
           });
 
