Adjust Font size in small screens

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                   <input
                     type="tel"
                     id="phone"
-                    placeholder="+1 (234) 567-8900"
+                    placeholder="+91 9999999999"
                   />
                 </div>
               </div>
