Add links to anchor tags

--- a/index.html
+++ b/index.html
@@ -250,10 +250,7 @@
 
             <article class="project-card reveal-card">
               <div class="project-image">
-                <img
-                  src="images/cogniai-page.png"
-                  alt="CogniAI screenshot"
-                />
+                <img src="images/cogniai-page.png" alt="CogniAI screenshot" />
               </div>
               <div class="project-content">
                 <h3>CogniAI</h3>
@@ -276,7 +273,7 @@
                     <i class="fas fa-external-link-alt"></i>
                   </a>
                   <a
-                    href="https://github.com/GnaniSai/cogni-ai-clone"
+                    href="https://github.com/GnaniSai/cogniAI-clone"
                     target="_blank"
                     class="project-link"
                     aria-label="View Code"
@@ -318,11 +315,7 @@
                 </div>
                 <div class="form-group">
                   <label for="phone">Phone</label>
-                  <input
-                    type="tel"
-                    id="phone"
-                    placeholder="+91 9999999999"
-                  />
+                  <input type="tel" id="phone" placeholder="+91 9999999999" />
                 </div>
               </div>
               <div class="form-group">
@@ -368,7 +361,6 @@
     </footer>
 
     <script>
-      // Mobile menu toggle
       const menuToggle = document.querySelector(".mobile-menu-toggle");
       const navWrapper = document.querySelector(".nav-wrapper");
 
@@ -377,7 +369,6 @@
         navWrapper.classList.toggle("active");
       });
 
-      // Intersection Observer for reveal animations
       const observerOptions = {
         threshold: 0.1,
         rootMargin: "0px",
