Remove Contact form added mail and message option

--- a/index.html
+++ b/index.html
@@ -293,42 +293,32 @@
             <h2><i class="fa fa-envelope"></i> Contact</h2>
             <div class="accent-bar"></div>
           </div>
+          <div class="lets-chat-message">
+            <span>Let's Chat</span>
+            <p>
+              I'm always open to new opportunities, collaborations, or just a
+              friendly hello.
+            </p>
+          </div>
+
           <div class="contact-container">
-            <form class="contact-form" action="#" autocomplete="off">
-              <div class="form-grid">
-                <div class="form-group">
-                  <label for="fname">First Name</label>
-                  <input type="text" id="fname" placeholder="John" required />
-                </div>
-                <div class="form-group">
-                  <label for="lname">Last Name</label>
-                  <input type="text" id="lname" placeholder="Doe" required />
-                </div>
-                <div class="form-group">
-                  <label for="email">Email</label>
-                  <input
-                    type="email"
-                    id="email"
-                    placeholder="john@example.com"
-                    required
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="phone">Phone</label>
-                  <input type="tel" id="phone" placeholder="+91 9999999999" />
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="message">Message</label>
-                <textarea
-                  id="message"
-                  rows="6"
-                  placeholder="Your message here..."
-                  required
-                ></textarea>
-              </div>
-              <button type="submit" class="submit-button">Send Message</button>
-            </form>
+            <div class="contact-links">
+              <a
+                href="https://mail.google.com/mail/?view=cm&fs=1&to=gnaneswarsai117@gmail.com&su=Hello&body=I'd%20love%20to%20connect!" target="_blank"
+                class="contact-link"
+              >
+              <i class="fa-solid fa-inbox"></i>
+                <span>Send via Gmail</span>
+              </a>
+              <a
+                href="https://linkedin.com/in/sallagundla-gnaneswar-sai-0231562b1"
+                class="contact-link"
+                target="_blank"
+              >
+              <i class="fa-solid fa-message"></i>
+                <span>Message Me on LinkedIn</span>
+              </a>
+            </div>
           </div>
         </div>
       </section>
@@ -352,7 +342,7 @@
           ></a>
         </div>
         <p class="footer-copyright">
-          &copy; 2024 Gnaneswar Sai. All rights reserved.
+          &copy; 2025 Gnaneswar Sai. All rights reserved.
         </p>
         <p class="footer-credit">
           Made with <span class="heart">❤️</span> by Gnaneswar Sai
