--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gnaneswar Sai Portfolio</title>
-    <link rel="shortcut icon" href="CoolBrio.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +22,7 @@
       <nav aria-label="Main navigation">
         <div class="nav-content">
           <a href="#home" class="logo-img">
-            <img src="images/CoolBrio.png" alt="Logo" />
+            <img src="images/logo.png" alt="Logo" />
             <span>Gnaneswar Sai</span>
           </a>
           <button class="mobile-menu-toggle" aria-label="Toggle menu">
